# prototype

./: .gitignore  LICENSE  README.md
bootloader/: Cargo.toml  example.c  memory.x
bootloader/src/: main.rs
desktop/: Cargo.toml
desktop/src/: main.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
wallet/: Cargo.toml  bl_flash.sh  flash.sh  memory.x  openocd.cfg  output.txt
wallet/.cargo/: config
wallet/src/: crypto.rs  error.rs  ethereum.rs  main.rs  safemem.rs  stuff.py  utils.rs
