[package]
name = "bootloader"
version = "0.1.0"
authors = ["Chris Novick <c.r.novick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stm32f4xx-hal = {path = "../../stm32f4xx-hal", features = ["rt", "stm32f401", "usb_fs"] }
embedded-hal = "0.2"
cortex-m = "0.6"
cortex-m-rt = "0.6"
panic-halt = "0.2"