[package]
name = "novus_wallet"
version = "0.1.0"
authors = ["Chris Novick <c.r.novick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "*"
serde = { version = "1.0", default-features = false }
protocol = {path="../protocol", features=["std"]}
postcard = {version="0.5.1", features=["use-std"]}
heapless = "*"
hex = "*"