[package]
name = "protocol"
version = "0.1.0"
authors = ["Chris Novick <c.r.novick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false  }
hex = {version="*", optional=true}

[features]
std = ["hex"] #enable to use stdlib related things