[package]
name = "wallet"
version = "0.1.0"
authors = ["Chris Novick <c.r.novick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The "medium" feature flag means "medium density", where "density" refers to the
# amount of features on a given microcontroller
# https://electronics.stackexchange.com/a/248187
# stm32f1xx-hal = {version = "0.7", features = ["rt", "stm32f103", "medium", "stm32-usbd"] }
# stm32f1xx-hal = {git="https://github.com/TheRealBluesun/stm32f1xx-hal", branch="flash_protection", features = ["rt", "stm32f103", "medium", "stm32-usbd"] }
# stm32f4xx-hal = {version = "0.8.3", features = ["rt", "stm32f401", "usb_fs"] }
# stm32f4xx-hal = {git = "https://github.com/astro/stm32f4xx-hal", branch="flash", features = ["rt", "stm32f401", "usb_fs"] }
stm32f4xx-hal = {path = "../..//stm32f4xx-hal", features = ["rt", "stm32f401", "usb_fs"] }
embedded-hal = "0.2"
cortex-m = "0.6"
cortex-m-rt = "0.6"
panic-halt = "0.2"
nb = "1"
usb-device = "0.2"
usbd-serial = "0.1"
libm = "0.2"
hex-literal = "*"

serde = { version = "1.0", default-features = false}
protocol = {path="../protocol"}
postcard = {version="0.5.1"}
heapless = "*"
numtoa = "*"
k256 = {version="*", default-features = false, features=["ecdsa", "keccak256", "arithmetic"]}
tiny-bip39 = {git="https://github.com/TheRealBluesun/tiny-bip39", branch="no_std", default-features=false}
tiny-hderive = {git="https://github.com/TheRealBluesun/tiny-hderive", branch="no_std"}
# tiny-hderive = {path="../../tiny-hderive"}
tiny-keccak = {version="2.0.2", features=["keccak"]}
ssd1306 = "*"
embedded-graphics = "*"
aes-ccm = {version="0.5.0",  default-features = false, features=["heapless", "aes"]}


[profile.release]
opt-level = 's' #'z'  # Optimize for size.
lto = true